# base-ai-study

./: .gitignore  README.md  main.py  pyproject.toml
src/fine-tuning/: data.py  qwen3_0.6b.py
src/modelscope/: qwen3.py
