[project]
name = "base-ai-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "addict>=2.4.0",
    "datasets==3.2.0",
    "modelscope>=1.25.0",
    "pandas>=2.2.3",
    "peft>=0.15.2",
    "qwen-vl-utils>=0.0.11",
    "swanlab>=0.5.8",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]
